--- a/templates/profile_todo/base.html
+++ b/templates/profile_todo/base.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -11,26 +9,35 @@
     <link rel="icon" type="image/png" href="https://pluspng.com/img-png/instagram-png-instagram-png-icon-1024.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'create' %}">Create Todo</a>
-      </li>
-{#         <li class="img" aria-setsize=""><img src="{% static 'profile_todo/images/todo.jpg' %}"></li>#}
-        <div class="text-center">
-  <img style="width:30%" src="{% static 'profile_todo/images/todo.jpg' %}" class="rounded" alt="...">
-</div>
-    </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'create' %}">Create Todo</a>
+            </li>
+            {#         <li class="img" aria-setsize=""><img src="{% static 'profile_todo/images/todo.jpg' %}"></li>#}
+            <div class="text-center">
+                <img style="width:30%" src="{% static 'profile_todo/images/todo.jpg' %}" class="rounded" alt="...">
+            </div>
+        </ul>
 
-</nav>
+    </nav>
 </head>
 <body>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-8">
+            <h1 class="mt-2">View your Todos here!</h1>
+            <hr class="mt-0 mb-4">
+            {% block site_content %}
+            {% endblock %}
 
-{% block site_content %}
-{% endblock %}
+        </div>
+
+    </div>
+</div>
 </body>
 </html>
