--- a/templates/profile_todo/edit.html
+++ b/templates/profile_todo/edit.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit TODO</title>
-</head>
+{% extends 'profile_todo/base.html' %}
 <body>
-<h1>Fill out the form!</h1>
+
 <div class="container">
-    <form method="post">
-        {% csrf_token %}
-        {{ todos.as_p }}
-        <input type="submit" class="btn btn-primary" value='Submit'>
-        <a class="btn" href="{% url 'index' %}">Return</a>
-    </form>
+    {% block site_content %}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-primary" value='Submit'>
+            <a class="btn" href="{% url 'home' %}">Return</a>
+        </form>
+    {% endblock %}
 </div>
 </body>
 </html>
