--- a/profile_todo/templates/profile_todo/edit.html
+++ b/profile_todo/templates/profile_todo/edit.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" class="btn btn-primary" value='Submit'>
-            <a class="btn" href="{% url 'home' %}">Return</a>
+            <a  class="btn btn-success" href="{% url 'home' %}">Return</a>
         </form>
     {% endblock %}
 </div>
