--- a/profile_todo/templates/profile_todo/home.html
+++ b/profile_todo/templates/profile_todo/home.html
@@ -7,9 +7,9 @@
         <ul>
             {% for todo in todos %}
                 <li>{{ todo.title|upper }}
-                    <button class="delete"><a href="{% url 'details' pk=todo.pk %}">Details</a></button>
-                    <button class="edit"><a href="{% url 'edit' pk=todo.pk %}">Edit</a></button>
-                    <button class="delete"><a href="{% url 'delete' pk=todo.pk %}">Delete</a></button>
+                    <button   class="btn btn-light"><a href="{% url 'details' pk=todo.pk %}">Details</a></button>
+                    <button   class="btn btn-light"><a href="{% url 'edit' pk=todo.pk %}">Edit</a></button>
+                    <button   class="btn btn-light"><a href="{% url 'delete' pk=todo.pk %}">Delete</a></button>
                 </li>
                 <p>
 
